Moved Player Start to front of dungeon

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -21,7 +21,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Engine/Maps/Entry.Entry
+GameDefaultMap=/Game/Worlds/NoContentWorld.NoContentWorld
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/GM_Xbot.GM_Xbot_C
 GlobalDefaultServerGameMode=None
